added css and java

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 *
 {
-    background-image: url(/assets/images/background3.jpg);
+    background: url(/assets/images/cave.png) no-repeat center center fixed;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     font-family: "myFont";
     
 }   
@@ -13,15 +17,20 @@
 h1 {
     font-family: "myFont";
     text-align: center;
-    color: rgb(240, 188, 16);
+    color: whitesmoke;
     font-size: 60px;
     
 }
 
 .rules {
     font-size: 20px;
-    color: white;
-    width: 400px;
-    height: 500px;
+    color: yellow;
+    width: 300px;
 
+
+}
+.scoreboard {
+    font-size: 20px;
+    color: yellowgreen;
+    float: right;
 }
