--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 *
 {
-    background: url(/assets/images/cave.png) no-repeat center center fixed;
+    background: url(/assets/images/Petra-Jordan-4.jpg) no-repeat center center fixed;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
@@ -26,6 +26,7 @@ h1 {
     font-size: 20px;
     color: yellow;
     width: 300px;
+    margin: 0%;
 
 
 }
