--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,49 +20,54 @@
     color: white;
     font-size: 90px;
     text-align: center;
+    margin-left: 20px;
     
 }
 .collector{
-    max-width:900px ;
+    max-width:900px;
+    margin-left: 20px;
 }
 .rules {
-    font-size: 20px;
-    color: greenyellow;
-    width: 300px;
+    font-size: 25px;
+    color:yellow;;
+    width: 400px;
     margin: 0%;
     float: right;
+
+}
+
+.scoreboard {
+    color: yellow;
+    float: left;
+    position: relative;
+    width: 250px;
+    font-size: 50px;
+    background-color: beige;
 
 }
 .totalscore{
 
     color: #e4ffe9fd;
+    position: relative;
 }
 #score {
     color: yellowgreen;
 }
 .randomNumber {
     color: yellowgreen;
+    margin-left: 20px;
 }
 #number {
     color: #e4ffe9fd;
 }
-.scoreboard {
-    color: yellow;
-    float: left;
-    width: 600px;
-    font-size: 50px;
-    background-color: beige;
 
-}
-
-}
 .crystals {
     display: flex;
-    justify-content: space-between;
     float: left;
+    position: absolute;
+    width: 500px;
 
 }
-
 img{
     width: 100px;
     height: 100px;
